# glass-pos-electron-fix1

./: .gitignore  App.tsx  README.md  build-tauri.sh  database-schema.ts  electron-builder.json  fix-tauri-config.sh  index.html  jest.config.js  jest.setup.js  metadata.json  new.txt  package-lock.json  package.json  run-tauri.sh  tauri.conf.json  tauri.ts  types.ts  vite.config.ts
__mocks__/: electron.js
components/: icons.tsx
components/ui/: GlassCard.tsx  NeuButton.tsx
contexts/: AuthContext.tsx  DataContext.tsx  DatabaseContext.tsx  I18nContext.tsx  SettingsContext.tsx
coverage/: lcov.info
coverage/lcov-report/: enhanced-database.js.html  index.html
data/: enhanced-pos.db  seed.ts
electron/: database-migration.js  database-migrator.js  database.js  enhanced-database.js  main.js  preload.js  printer.js  run-migration.js  security-manager.js
electron/__tests__/: enhanced-database.test.js  printer.test.js
electron/migrations/: 001_initial_schema.sql
layouts/: MainLayout.tsx
pages/: CategoriesPage.tsx  CustomersPage.tsx  DashboardPage.tsx  ExpensesPage.tsx  InvoicesPage.tsx  LoginPage.tsx  POSPage.tsx  ProductsPage.tsx  ReportsPage.tsx  SalesPage.tsx  SettingsPage.tsx  ShiftPage.tsx  SuppliersPage.tsx  UsersPage.tsx
pages/POSPage/components/: Cart.tsx  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: commands.rs  database.rs  generate_hash.rs  lib.rs  main.rs  printer.rs  tauri.ts
translations/: ar.json  en.json
utils/: currency.ts  tauri-api.ts
(+6 files in other folders)
