[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
once_cell = "1.18.0"
